added Test Results, added Alternative Code Sample

--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Python311
+home = /usr/local/opt/python@3.11/bin
 include-system-site-packages = false
 version = 3.11.3
-executable = C:\Python311\python.exe
-command = C:\Python311\python.exe -m venv C:\Users\Jerome\OneDrive\Desktop\Projects\image-python-validator\env
+executable = /usr/local/Cellar/python@3.11/3.11.3/Frameworks/Python.framework/Versions/3.11/bin/python3.11
+command = /usr/local/opt/python@3.11/bin/python3.11 -m venv /Users/limhongyong/Desktop/Personal Projects/media_validation_python/env
