--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
-# Ignore Python bytecode files
-__pycache__/
+# Python cache files
+__pycache__
 *.pyc
 *.pyo
 *.pyd
 
-# Ignore system-specific files
-.DS_Store
-Thumbs.db
+# Virtual environment
+venv
+*.venv
+env
 
-# Ignore IDE-specific files and directories
-.vscode/
-.idea/
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# macOS system files
+.DS_Store
+
+# Visual Studio Code settings
+.vscode
