--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ imageio-ffmpeg     ==0.4.8
 moviepy            ==1.0.3
 numpy              ==1.24.3
 Pillow             ==9.5.0
+ffmpeg             ==1.4
